force-app/main/default/objects/NSSAudit__c/NSSAudit__c.object-meta.xml
<CustomObject>
    <label>NSS Sales</label>
    <nameField>
        <displayFormat>Id-{000000}</displayFormat>
        <label>Sales Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NSS Sales</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>