force-app/main/default/objects/NSSAudit__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prospect Client</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>NSS_Audits</relationshipName>
    <type>Lookup</type>
</CustomField>