force-app/main/default/objects/NSSAudit__c/fields/AuditNotes__c.field-meta.xml
<CustomField>
    <fullName>AuditNotes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Notes on why this was approved or rejected.</inlineHelpText>
    <label>Audit Notes</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>