force-app/main/default/objects/NSSAudit__c/fields/BranchNumber__c.field-meta.xml
<CustomField>
    <fullName>BranchNumber__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Branch Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>