force-app/main/default/objects/NSSAudit__c/fields/CommissionMonth__c.field-meta.xml
<CustomField>
    <fullName>CommissionMonth__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>What commission month is this sale record linked to?</inlineHelpText>
    <label>Commission Month</label>
    <referenceTo>CommissionMonth__c</referenceTo>
    <relationshipLabel>NSS Sales</relationshipLabel>
    <relationshipName>NSSSales</relationshipName>
    <type>Lookup</type>
</CustomField>