force-app/main/default/objects/NSSAudit__c/fields/CreditDate__c.field-meta.xml
<CustomField>
    <fullName>CreditDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The date credit was given</inlineHelpText>
    <label>Credit Date</label>
    <type>Date</type>
</CustomField>