force-app/main/default/objects/NSSAudit__c/fields/NSR__c.field-meta.xml
<CustomField>
    <fullName>NSR__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The contact record of the NSR</inlineHelpText>
    <label>NSR</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>You must select a Paychex employee!</errorMessage>
        <filterItems>
            <field>Contact.Account.Name</field>
            <operation>equals</operation>
            <value>Paychex Inc SA</value>
        </filterItems>
        <filterItems>
            <field>Contact.HR_Person_Id__c</field>
            <operation>notEqual</operation>
            <value></value>
        </filterItems>
        <infoMessage>Paychex Employee contact records</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>NSS Sales</relationshipLabel>
    <relationshipName>NSS_Sales</relationshipName>
    <type>Lookup</type>
</CustomField>