force-app/main/default/objects/NSSAudit__c/fields/NSR_Name__c.field-meta.xml
<CustomField>
    <fullName>NSR_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Leave blank for Inactive NSRs</inlineHelpText>
    <label>NSR Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>NSS_Audits</relationshipName>
    <type>Lookup</type>
</CustomField>