force-app/main/default/objects/NSSAudit__c/fields/Nss__c.field-meta.xml
<CustomField>
    <fullName>Nss__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Nss</label>
    <type>Checkbox</type>
</CustomField>