force-app/main/default/objects/NSSAudit__c/fields/NSS_Source__c.field-meta.xml
<CustomField>
    <fullName>NSS_Source__c</fullName>
    <label>NSS Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Outbound</fullName>
                <default>true</default>
                <label>Outbound</label>
            </value>
            <value>
                <fullName>Inbound</fullName>
            </value>
            <value>
                <fullName>Inbound-Oasis</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>