force-app/main/default/objects/NSSAudit__c/fields/NSS_Team__c.field-meta.xml
<CustomField>
    <fullName>NSS_Team__c</fullName>
    <label>NSS Team</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>HNB</fullName>
            </value>
            <value>
                <fullName>HRS</fullName>
            </value>
            <value>
                <fullName>MMS</fullName>
            </value>
            <value>
                <fullName>NT</fullName>
            </value>
            <value>
                <fullName>PAY</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>