force-app/main/default/objects/NSSAudit__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>401k</fullName>
            </value>
            <value>
                <fullName>Advance</fullName>
            </value>
            <value>
                <fullName>Advantage</fullName>
            </value>
            <value>
                <fullName>ASO</fullName>
            </value>
            <value>
                <fullName>Biz2Credit</fullName>
            </value>
            <value>
                <fullName>CCP</fullName>
            </value>
            <value>
                <fullName>Core</fullName>
            </value>
            <value>
                <fullName>ePlan</fullName>
            </value>
            <value>
                <fullName>ERTC</fullName>
            </value>
            <value>
                <fullName>ESR</fullName>
            </value>
            <value>
                <fullName>EW</fullName>
            </value>
            <value>
                <fullName>FSA</fullName>
            </value>
            <value>
                <fullName>HBK</fullName>
            </value>
            <value>
                <fullName>HNB AFLAC</fullName>
            </value>
            <value>
                <fullName>HNB Dental</fullName>
            </value>
            <value>
                <fullName>HNB GTL</fullName>
            </value>
            <value>
                <fullName>HNB HIA</fullName>
            </value>
            <value>
                <fullName>HNB LTD</fullName>
            </value>
            <value>
                <fullName>HNB Medical</fullName>
            </value>
            <value>
                <fullName>HNB NYS Dis</fullName>
            </value>
            <value>
                <fullName>HNB STD</fullName>
            </value>
            <value>
                <fullName>HNB Vol. Ancilly</fullName>
            </value>
            <value>
                <fullName>HRE</fullName>
            </value>
            <value>
                <fullName>IHI</fullName>
            </value>
            <value>
                <fullName>MMS</fullName>
            </value>
            <value>
                <fullName>MSP</fullName>
            </value>
            <value>
                <fullName>NT</fullName>
            </value>
            <value>
                <fullName>PBA</fullName>
            </value>
            <value>
                <fullName>PEO</fullName>
            </value>
            <value>
                <fullName>PESS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>