force-app/main/default/objects/NSSAudit__c/fields/Prospect_Ownership__c.field-meta.xml
<CustomField>
    <fullName>Prospect_Ownership__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prospect Ownership</label>
    <referenceTo>Prospect_Ownership__c</referenceTo>
    <relationshipName>NSS_Commissions</relationshipName>
    <type>Lookup</type>
</CustomField>