force-app/main/default/objects/NSSAudit__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>What is the source of this NSS Sale record?</inlineHelpText>
    <label>Source</label>
    <length>20</length>
    <type>Text</type>
</CustomField>