force-app/main/default/objects/NSSAudit__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Inbound Approved</fullName>
            </value>
            <value>
                <fullName>Inbound Re-Approved</fullName>
            </value>
            <value>
                <fullName>Supervisor Approved</fullName>
            </value>
            <value>
                <fullName>Supervisor Rejected</fullName>
            </value>
            <value>
                <fullName>Audit Approved</fullName>
            </value>
            <value>
                <fullName>Audit Rejected</fullName>
            </value>
            <value>
                <fullName>Audit Reject Final</fullName>
            </value>
            <value>
                <fullName>Opportunity</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>System Approved</fullName>
            </value>
            <value>
                <fullName>Pending Supp Mgr Review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>