force-app/main/default/objects/NSSAudit__c/fields/SubmitNotes__c.field-meta.xml
<CustomField>
    <fullName>SubmitNotes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Notes when submitting the commission record.</inlineHelpText>
    <label>Supervisor Notes</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>