force-app/main/default/objects/NSSAudit__c/fields/update_nss_record__c.field-meta.xml
<CustomField>
    <fullName>update_nss_record__c</fullName>
    <defaultValue>false</defaultValue>
    <label>update nss record</label>
    <type>Checkbox</type>
</CustomField>