force-app/main/default/objects/NSSAudit__c/recordTypes/Audit.recordType-meta.xml
<RecordType>
    <fullName>Audit</fullName>
    <active>true</active>
    <description>When a commission record is audited</description>
    <label>Audit Record Type</label>
</RecordType>