force-app/main/default/objects/NSSAudit__c/recordTypes/NSR_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>NSR_Record_Type</fullName>
    <active>true</active>
    <label>NSR Record Type</label>
</RecordType>