force-app/main/default/objects/NSSAudit__c/recordTypes/Submitted.recordType-meta.xml
<RecordType>
    <fullName>Submitted</fullName>
    <active>true</active>
    <description>When a commission record is submitted</description>
    <label>Supervisor Record Type</label>
</RecordType>