force-app/main/default/objects/NSSAudit__c/validationRules/Limit_Inbound_Rep_Statuses.validationRule-meta.xml
<ValidationRule>
    <fullName>Limit_Inbound_Rep_Statuses</fullName>
    <active>true</active>
    <description>Limit which Statuses the Inbound rep can use</description>
    <errorConditionFormula>$Profile.Name = &apos;NSS Inbound Rep&apos; &amp;&amp; 
NOT( ISPICKVAL( Status__c , &apos;Inbound Approved&apos;) ) &amp;&amp; 
NOT( ISPICKVAL( Status__c , &apos;Inbound Re-Approved&apos;) ) &amp;&amp; 
NOT( ISPICKVAL( Status__c , &apos;Pending&apos;) ) &amp;&amp;
NOT( ISPICKVAL( Status__c , &apos;Cancelled&apos;) )</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>You do not have permission to use this value.</errorMessage>
</ValidationRule>