force-app/main/default/objects/NSSAudit__c/validationRules/Limit_NSR_Outbound_Cloned_Rcd_Statuses.validationRule-meta.xml
<ValidationRule>
    <fullName>Limit_NSR_Outbound_Cloned_Rcd_Statuses</fullName>
    <active>true</active>
    <description>Limit which Statuses are used when a record is cloned</description>
    <errorConditionFormula>ISNEW() &amp;&amp; $Profile.Name = &apos;NSS Outbound Rep&apos; &amp;&amp; 
NOT(ISPICKVAL( Status__c , &apos;Pending&apos;)) &amp;&amp; 
NOT(ISPICKVAL( Status__c , &apos;Submitted&apos;))</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Please pick a different status for this record.</errorMessage>
</ValidationRule>