force-app/main/default/objects/NSSAudit__c/validationRules/Limit_Supervisor_Cloned_Rcd_Statuses.validationRule-meta.xml
<ValidationRule>
    <fullName>Limit_Supervisor_Cloned_Rcd_Statuses</fullName>
    <active>true</active>
    <description>Limit which Statuses are used when a record is cloned</description>
    <errorConditionFormula>ISNEW() &amp;&amp; $Profile.Name = &apos;NSS Manager&apos; &amp;&amp; 
(ISPICKVAL( Status__c , &apos;Audit Approved&apos;) || 
ISPICKVAL( Status__c , &apos;Audit Rejected&apos;) || 
ISPICKVAL( Status__c , &apos;Audit Reject Final&apos;))</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Please pick a different status for this record.</errorMessage>
</ValidationRule>