force-app/main/default/objects/NSSAudit__c/validationRules/Limit_who_can_edit_audit_rejected_rcd.validationRule-meta.xml
<ValidationRule>
    <fullName>Limit_who_can_edit_audit_rejected_rcd</fullName>
    <active>true</active>
    <description>based on record type and profile limit who can edit this record</description>
    <errorConditionFormula>IF( OR( ISPICKVAL(PRIORVALUE(Status__c),&apos;Audit Rejected&apos;), ISPICKVAL(Status__c, &apos;Audit Rejected&apos;)) &amp;&amp; 
NOT($Profile.Name=&apos;NSS Manager&apos;) &amp;&amp; 
NOT($Profile.Name =&apos;NSS Manager Admin&apos;) &amp;&amp; 
NOT($Profile.Name =&apos;Sales Enablement&apos;) &amp;&amp;
NOT ($Profile.Name = &apos;Sales CSA&apos;) &amp;&amp;
NOT ($Profile.Name = &apos;System Administrator&apos;) &amp;&amp; 
NOT ($Profile.Name = &apos;NSS Inbound Rep&apos;),  
true, false)</errorConditionFormula>
    <errorMessage>You do not have permission to edit this Audit Rejected record.</errorMessage>
</ValidationRule>