force-app/main/default/objects/NSSAudit__c/validationRules/Limit_who_can_edit_super_appvd_rcd.validationRule-meta.xml
<ValidationRule>
    <fullName>Limit_who_can_edit_super_appvd_rcd</fullName>
    <active>true</active>
    <description>based on record type and profile limit who can edit this record</description>
    <errorConditionFormula>IF( AND(OR(ISPICKVAL(PRIORVALUE(Status__c), &apos;Supervisor Approved&apos;), ISPICKVAL(Status__c, &apos;Supervisor Approved&apos;),
ISPICKVAL(PRIORVALUE(Status__c), &apos;Supervisor Re-Approved&apos;), ISPICKVAL(Status__c, &apos;Supervisor Re-Approved&apos;)),
NOT($Profile.Name =&apos;NSS Manager&apos;),
NOT ($Profile.Name = &apos;Sales Enablement&apos;),
NOT($Profile.Name =&apos;Sales CSA&apos;),
NOT($Profile.Name = &apos;NSS Manager Admin&apos;),
NOT($Profile.Name = &apos;System Administrator&apos;)), true, false)</errorConditionFormula>
    <errorMessage>You do not have permission to edit this Supervisor Approved record.</errorMessage>
</ValidationRule>