force-app/main/default/objects/NSSAudit__c/listViews/Created_Last_N_Days.listView-meta.xml
<ListView>
    <fullName>Created_Last_N_Days</fullName>
    <columns>NAME</columns>
    <columns>NSR_Name__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CreditDate__c</columns>
    <columns>CommissionMonth__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:30</value>
    </filters>
    <label>Created Last N Days</label>
    <sharedTo>
        <role>SystemAdministrator</role>
        <role>Virtual_Sales_and_NSS</role>
    </sharedTo>
</ListView>