force-app/main/default/objects/NSSAudit__c/listViews/Created_Yesterday.listView-meta.xml
<ListView>
    <fullName>Created_Yesterday</fullName>
    <columns>NAME</columns>
    <columns>NSR_Name__c</columns>
    <columns>Status__c</columns>
    <columns>Product__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CreditDate__c</columns>
    <columns>CommissionMonth__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>YESTERDAY</value>
    </filters>
    <label>Created Yesterday</label>
    <sharedTo>
        <role>SystemAdministrator</role>
    </sharedTo>
</ListView>