force-app/main/default/objects/NSSAudit__c/listViews/My_Submitted_NSS_Sales.listView-meta.xml
<ListView>
    <fullName>My_Submitted_NSS_Sales</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Client_Number2__c</columns>
    <columns>Client_Number__c</columns>
    <columns>Run_Submit_Date__c</columns>
    <columns>Product__c</columns>
    <columns>NSR_Name__c</columns>
    <columns>Revenue__c</columns>
    <columns>Status__c</columns>
    <columns>Units__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Submitted</value>
    </filters>
    <label>My Submitted NSS Sales</label>
</ListView>