force-app/main/default/objects/NSSAudit__c/listViews/Pending_Sales_by_User.listView-meta.xml
<ListView>
    <fullName>Pending_Sales_by_User</fullName>
    <columns>NAME</columns>
    <columns>Client_Number2__c</columns>
    <columns>CreditDate__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Product__c</columns>
    <columns>Run_Submit_Date__c</columns>
    <columns>ProspectID__c</columns>
    <columns>Account__c</columns>
    <columns>Client_Number__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Pending</value>
    </filters>
    <filters>
        <field>NSR_Name__c</field>
        <operation>equals</operation>
        <value>Karen Dion</value>
    </filters>
    <label>Pending Sales by User</label>
    <sharedTo>
        <role>SystemAdministrator</role>
    </sharedTo>
</ListView>