force-app/main/default/objects/NSSAudit__c/listViews/Records_To_Audit_Inbound_Eileen.listView-meta.xml
<ListView>
    <fullName>Records_To_Audit_Inbound_Eileen</fullName>
    <columns>NAME</columns>
    <columns>Units__c</columns>
    <columns>CreditDate__c</columns>
    <columns>Status__c</columns>
    <columns>Audit_Date__c</columns>
    <columns>Prospect_Ownership__c</columns>
    <columns>RLC__c</columns>
    <columns>Client_Number2__c</columns>
    <columns>Product__c</columns>
    <columns>Run_Submit_Date__c</columns>
    <columns>Opportunity__c</columns>
    <columns>NSR__c</columns>
    <columns>NSR_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NSS_Source__c</field>
        <operation>contains</operation>
        <value>Outbound,Inbound</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>NSSAudit__c.Audit</value>
    </filters>
    <filters>
        <field>Units__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>CreditDate__c</field>
        <operation>greaterThan</operation>
        <value>6/15/2020</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Audit Approved</value>
    </filters>
    <label>Records To Audit - Inbound - Eileen</label>
    <sharedTo>
        <role>Virtual_Sales_and_NSS</role>
    </sharedTo>
</ListView>