force-app/main/default/objects/NSSAudit__c/listViews/Records_To_Audit_Outbound_Eileen3.listView-meta.xml
<ListView>
    <fullName>Records_To_Audit_Outbound_Eileen3</fullName>
    <columns>NAME</columns>
    <columns>CreditDate__c</columns>
    <columns>Status__c</columns>
    <columns>Audit_Date__c</columns>
    <columns>Reason_for_Failure__c</columns>
    <columns>SubmitNotes__c</columns>
    <columns>NSR_Name__c</columns>
    <columns>Product__c</columns>
    <columns>Client_Number2__c</columns>
    <columns>Run_Submit_Date__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Source__c</columns>
    <columns>RLC__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Supervisor Approved</value>
    </filters>
    <filters>
        <field>NSS_Source__c</field>
        <operation>equals</operation>
        <value>Outbound</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>NSSAudit__c.Audit</value>
    </filters>
    <label>Records To Audit - Outbound - Eileen</label>
    <sharedTo>
        <role>CSAAnalystCoordinator</role>
        <role>Virtual_Sales_and_NSS</role>
    </sharedTo>
</ListView>